# zlibdemo

./: .gitignore  CMakeLists.txt  README.md  config_linux.sh  config_vs2017.bat
src/: CMakeLists.txt
src/example/: CMakeLists.txt  main.cpp
src/zlibio/: CMakeLists.txt  fileio.cpp  fileio.h
